<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignInActivity">
  <ImageView
          android:id="@+id/title"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.8"
          android:layout_height="140dp"
          android:src="@drawable/title"
          android:contentDescription="@string/title"
          android:scaleType="fitCenter"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          android:layout_marginTop="40dp"
  />

  <!-- email -->
  <TextView
          android:id="@+id/label_email"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.8"
          android:layout_height="wrap_content"
          android:text="@string/label_email"
          android:textSize="18sp"
          app:layout_constraintTop_toBottomOf="@id/title"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          android:layout_marginTop="60dp"
  />

  <EditText
          android:id="@+id/et_email"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.8"
          android:layout_height="wrap_content"
          android:textSize="18sp"
          app:layout_constraintTop_toBottomOf="@id/label_email"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          android:hint="@string/hints_email"
          android:inputType="textEmailAddress"
          android:autofillHints="emailAddress"
  />

  <!-- password  -->
  <TextView
          android:id="@+id/label_password"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.8"
          android:layout_height="wrap_content"
          android:text="@string/label_password"
          android:textSize="18sp"
          app:layout_constraintTop_toBottomOf="@id/et_email"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          android:layout_marginTop="20dp"
  />

  <EditText
          android:id="@+id/et_password"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.8"
          android:layout_height="wrap_content"
          android:textSize="18sp"
          app:layout_constraintTop_toBottomOf="@id/label_password"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          android:hint="@string/hints_email"
          android:inputType="textPassword"
          android:autofillHints="password"
  />

  <!--  buttons-->

  <Button
          android:id="@+id/btn_signin"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.8"
          android:layout_height="wrap_content"
          android:text="@string/btn_signin"
          android:textSize="18sp"
          app:layout_constraintBottom_toTopOf="@id/btn_signup"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          android:layout_marginBottom="20dp"
  />

  <Button
          android:id="@+id/btn_signup"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.8"
          android:layout_height="wrap_content"
          android:text="@string/btn_signup"
          android:textSize="18sp"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:layout_marginBottom="40dp"
  />

</androidx.constraintlayout.widget.ConstraintLayout>