<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">

  <ImageView
          android:id="@+id/title"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.8"
          android:layout_height="100dp"
          android:src="@drawable/title"
          android:contentDescription="@string/title"
          android:scaleType="fitCenter"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          android:layout_marginTop="40dp"
  />

  <!--  name-->
  <TextView
          android:id="@+id/label_name"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.8"
          android:layout_height="wrap_content"
          android:text="@string/label_name"
          android:textSize="18sp"
          app:layout_constraintTop_toBottomOf="@id/title"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          android:layout_marginTop="60dp"
  />

  <EditText
          android:id="@+id/et_name"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.8"
          android:layout_height="wrap_content"
          android:textSize="18sp"
          app:layout_constraintTop_toBottomOf="@id/label_name"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          android:hint="@string/hints_name"
          android:inputType="text"
          android:autofillHints="emailAddress"
  />

  <TextView
          android:id="@+id/warn_name"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.8"
          android:layout_height="wrap_content"
          android:textColor="#FF0000"
          app:layout_constraintTop_toBottomOf="@id/et_name"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
  />

  <!-- email -->
  <TextView
          android:id="@+id/label_email"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.8"
          android:layout_height="wrap_content"
          android:text="@string/label_email"
          android:textSize="18sp"
          app:layout_constraintTop_toBottomOf="@id/warn_name"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          android:layout_marginTop="12dp"
  />

  <EditText
          android:id="@+id/et_email"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.5"
          android:layout_height="wrap_content"
          android:textSize="18sp"
          app:layout_constraintTop_toBottomOf="@id/label_email"
          app:layout_constraintLeft_toLeftOf="@id/label_email"
          android:hint="@string/hints_email"
          android:inputType="textEmailAddress"
          android:autofillHints="emailAddress"
  />

  <Spinner
          android:id="@+id/sp_email"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.5"
          android:layout_height="wrap_content"
          app:layout_constraintLeft_toRightOf="@id/et_email"
          app:layout_constraintTop_toBottomOf="@id/label_email"
  />

  <EditText
          android:id="@+id/et_email_body"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.8"
          android:layout_height="wrap_content"
          android:hint="@string/hints_email_body"
          android:textSize="18sp"
          app:layout_constraintTop_toBottomOf="@id/et_email"
          app:layout_constraintLeft_toLeftOf="@id/label_email"
          android:autofillHints="emailAddress"
          android:inputType="textEmailAddress"
          android:visibility="gone"
  />

  <TextView
          android:id="@+id/warn_email"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.8"
          android:layout_height="wrap_content"
          android:textColor="#FF0000"
          app:layout_constraintTop_toBottomOf="@id/et_email_body"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
  />

  <!-- password  -->
  <TextView
          android:id="@+id/label_password"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.8"
          android:layout_height="wrap_content"
          android:text="@string/label_password"
          android:textSize="18sp"
          app:layout_constraintTop_toBottomOf="@id/warn_email"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          android:layout_marginTop="20dp"
  />

  <EditText
          android:id="@+id/et_password"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.8"
          android:layout_height="wrap_content"
          android:textSize="18sp"
          app:layout_constraintTop_toBottomOf="@id/label_password"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          android:hint="@string/hints_password"
          android:inputType="textPassword"
          android:autofillHints="password"
  />

  <TextView
          android:id="@+id/warn_password"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.8"
          android:layout_height="wrap_content"
          android:textColor="#FF0000"
          app:layout_constraintTop_toBottomOf="@id/et_password"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
  />

  <!-- buttons -->
  <Button
          android:id="@+id/btn_signup"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.8"
          android:layout_height="wrap_content"
          android:text="@string/btn_signup"
          android:textSize="18sp"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:layout_marginBottom="40dp"
  />

</androidx.constraintlayout.widget.ConstraintLayout>